--- a/public/ststic/red_packets/css/demo.css
+++ b/public/ststic/red_packets/css/demo.css
@@ -146,7 +146,7 @@ body {
   }
   .backward{
     width: 100%;
-    background:#ccc;
+    background:#000;
     opacity: 0.5;
     position: absolute;
     top: 0;
@@ -156,7 +156,7 @@ body {
     display: inline-block;
     width: 100px;
     height: 100px;
-    color: #000;
+    color: #ccc;
     font-weight: bold;
     position: absolute;
     top: 0;
@@ -168,4 +168,14 @@ body {
     line-height: 100px;
     font-size: 1000%;
   }
+
+.allTime{ position: absolute; left: 20%; top: 4.5%;  }
+.fx{ position: absolute;right: 20%; top: 4.5%; }
+
+.end{ display: none; position: absolute; top: 0rem; width: 100%;background-color:#000;background: rgba(0, 0, 0, 0.5); height: 100%; z-index: 101; padding-top: 5rem;}
+.end .content{ position: absolute;  z-index: 111; }
+.end .content .info label{ font-size: 1.2rem; color: #fff; position: relative;  text-align: center; width: 50%;  margin: 0 auto;  display: block; bottom: 6.2rem;  }
+.end .content .info img{ width: 90%; margin-left: 10%; margin-bottom: 2rem; }
+.end .content .menus li{  width: 90%;  margin-left: 5%; margin-top: 1rem; }
+.end .content .menus li img{ width: 70%; margin-left: 15%; }
 
