红包雨项目优化

--- a/appliaction/red_packets/index/view/red_packets/ranking.html
+++ b/appliaction/red_packets/index/view/red_packets/ranking.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 	<div class="ranking">
+		<div class="back"><a href="{F:url('index')}"><img src="{F:getConfig('config','ststic')}/red_packets/images/back.png"></a></div>
 		<div class="info">
 			您总共{$user['allIntegral']}积分，当前排名第{$user['ranking']}名！
 		</div>
