--- a/appliaction/red_packets/index/view/index/index.html
+++ b/appliaction/red_packets/index/view/index/index.html
@@ -24,7 +24,10 @@
 	<script type="text/javascript" src="{F:getConfig('config','vendor')}/pace/pace.min.js"></script>
 	<script type="text/javascript" src="{F:getConfig('config','vendor')}/layer/layer.js"></script>
 	<script type="text/javascript">
-		$('.guide img').css('height',window.screen.height);
+		console.log(window.screen.height);
+		console.log(document.body.clientHeight);
+		console.log(window.screen.availHeight);
+		$('.guide img').css('height',window.screen.availHeight - 60);
 		$('.guide').click(function(){
 			var id = Number($(this).find('img').attr('data-id'));
 			if(id == 1){
@@ -36,6 +39,7 @@
 			}
 			console.log(id);
 		})
+		document.body.style.overflow='hidden';        
 	</script>
 </body>
 </html>
