--- a/appliaction/study/view/user/public/left_menus.html
+++ b/appliaction/study/view/user/public/left_menus.html
@@ -1,5 +1,5 @@
 <nav id="hamburgermenu">
-    <div class="logo"><img src="/ststic/study/images/logo.png" /></div>
+    <div class="logo"><a href="/"><img src="/ststic/study/images/logo.png" /></a></div>
     <h3>学生门户</h3>
     <ul>
         <li {if CONTROLLER == 'message'}class="on"{/if}>
