--- a/appliaction/study/view/user/Reservation/initiated.html
+++ b/appliaction/study/view/user/Reservation/initiated.html
@@ -51,7 +51,9 @@
                     </p>
                     <div style="width:100%; height:20px"></div>
                     <p><span>预约时间：</span>
-                	   <input type="text" placeholder="课程开始时间" name="tmp_start_time" style="width: 23%; display: inline-block;"><button type="button" class="addOn"></button>
+                    <div class="date-choice">
+                        <input type="text" placeholder="开始时间" name="tmp_start_time">
+                    </div>
             	       <dl class="select select2">
                             <dt>请选择</dt>
                             <dd>
