--- a/appliaction/admin/view/content/car/edit.html
+++ b/appliaction/admin/view/content/car/edit.html
@@ -16,6 +16,19 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
+								<span>店铺</span>
+							</label>
+							<div class="col-sm-8">
+								<select name="city" class="form-control w160" data-selected="{??$data['city']}" disabled>
+									{loop $other['cityCopy'] $key $value}
+									<option value="{$key}" >{$value}</option>
+									{/loop}
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger"></span>
 								<span>标题</span>
 							</label>
 							<div class="col-sm-8">
@@ -28,9 +41,7 @@
 								<span>Banner图片</span>
 							</label>
 							<div class="col-sm-8">
-								{loop $data['banner'] $key $value}
-									<img src="{$value}" width="150" height="100" style="margin-left: 10px;">
-								{/loop}
+								<a class="btn btn-primary btn-ablum" data-name="thumb" data-value='{??$data['banner']}' data-path="blog" data-max="1">添加图片</a>
 							</div>
 						</div>
 						<div class="form-group">
