--- a/appliaction/study/view/teacher/lessons/index.html
+++ b/appliaction/study/view/teacher/lessons/index.html
@@ -2,84 +2,94 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>学生门户-我的课程</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="Content-Type" content="charset=utf-8" />
-        <link rel="stylesheet" href="/ststic/study/css/base.css">
-        <link rel="stylesheet" href="/ststic/study/css/center.css">
-        <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
+       <meta charset="UTF-8">
+      <title>教师中心-课时管理</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="Content-Type" content="charset=utf-8" />
+      <link rel="stylesheet" href="/ststic/study/css/base.css">
+      <link rel="stylesheet" href="/ststic/study/css/center.css">
+      <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
 
-        <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/ststic/study/js/moment.js"></script>
-        <script type="text/javascript" src="/ststic/study/js/bootstrap-datetimepicker.js"></script>
-        <script type="text/javascript" src="/ststic/study/js/menu.js"></script>
+      <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>
+      <script type="text/javascript" src="/ststic/study/js/moment.js"></script>
+      <script type="text/javascript" src="/ststic/study/js/menu.js"></script>
 
-        <script type="text/javascript" src="/ststic/study/js/common.js"></script>
-        <script type="text/javascript" src="/vendor/layer/layer.js"></script>
+      <script type="text/javascript" src="/ststic/study/js/common.js"></script>
+      <script type="text/javascript" src="/vendor/layer/layer.js"></script>
    </head>
 <body bgcolor="f1f1f1" >
-	
+  
         <div class="center">
-        	<div id="navbar"><span><i class="ico2"></i>教师中心-评论管理</span><a href="#" class="menubtn"></a>
-        {include public/left_menus}
-    </div>
+          <header>
+            <div id="navbar"><span><i class="ico2"></i>教师中心-课时管理</span><a href="#" class="menubtn"></a>
+            {include public/left_menus}
         
-        <div class="classroom_right">
-        		<h3 class="my_news my-object">我的课程</h3>
-        	<div class="t_cr_left fl">
-            	<b>同学您好！</b>
-                <span>您报名的课程都在右边列表中，记得准时上课哟~</span>
+        <div class="classroom_right teacher_right_t">
+            <h3 class="ks_news">课时管理</h3>
+            <div class="t_cr_left t_ks fl">
+              <p class="onli">一类课（7课时）</p>
+                <ul>
+                    {loop $other['lessonType'] $key $value}
+                    <li {if $type == $key}class="on"{/if}><a href="{F:url('',array('type'=>$key))}">{$value}（0课时）</a></li>
+                    {/loop}
+                   
+                </ul>
             </div>
-			<div class="t_cr_right pp_t fr navgation ">
-             <div class="width80 clearfix">
-                {loop $list $value}
-                <div class="com_pp clearfix">
-                	<div class="left_img"><a href="{F:url('/index/course/detail',array('id'=>$value['goods']['goods_id']))}" class="names" target="_blank"><img src="{F:imgUrl($value['goods']['thumb'],'article')}" /></a></div>
-                	<div class="comm_title">
-                    	<p class="title_pp"><a href="{F:url('/index/course/detail',array('id'=>$value['goods']['goods_id']))}" class="names" target="_blank">{$value['goods']['title']}</a></p>
-                        <p class="comm_cont"><b>“</b>{$value['goods']['recruit']}”<b>”</b></p>
-                        
-                         
-                    </div>
-                    
-                </div>
-                {/loop}
-                
-                <div class="page ">
-                    <p><b>{$pages['pageNo']}</b>/{$pages['allPage']}</p>
-                    <a href="{$pages['pageUrl']}?pageNo={F:max($pages['pageNo'] - 1,1)}">上一页</a>
-                    <a href="{$pages['pageUrl']}?pageNo={F:min($pages['pageNo'] + 1,$pages['allPage'])}">下一页</a>
-                </div>
-			</div>
-        
-        </div>     	
-            
-        
-        </div>
-   </div>
-
-
-         
-</body>
-<script>
-  $(".un_fina").click(function(){
-	  $(".xiugais").slideToggle();
-  })
-  $(".closebox ").click(function(){
-		  $(".xiugais").css("display","none");
-	  })
-
-</script>
-
-  <script>
+                <script>
     $(document).ready(function(){
   $(".onli").click(function(){
   $(".t_cr_left ul").slideToggle();
   });
    });
 
-    </script> 
+    </script>
 
+          <div class="t_cr_right fr">
+              <ul class="kc">
+                    {loop $list $key $value}
+                    <li>
+                        <div class="imgs"><a href="{F:url('index/course/detail',array('id'=>$value['id']))}"><img src="{$value['thumb']}" /></a></div>
+                        <div class="name">{$value['title']}</div>
+                        <div class="keshi"><span><i></i>{$value['courseLog']['lesson']}课时</span><span><i></i>一对一授课</span></div>
+                        <p>上课时间：{F:date('Y-m-d',$value['start_time'])}<span>{F:date('H:i',$value['start_time'])}-{F:date('H:i',$value['end_time'])}</span></p>
+                    </li>
+                    {/loop}
+                    
+                    {if $pages}
+                    <div class="page">
+                        <p><b>{$pages['pageNo']}</b>/{$pages['allPage']}</p>
+                        <a href="{$pages['pageUrl']}?pageNo={F:max($pages['pageNo'] - 1,1)}">上一页</a>
+                        <a href="{$pages['pageUrl']}?pageNo={F:min($pages['pageNo'] + 1,$pages['allPage'])}">下一页</a>
+                    </div>
+                    {/if}
+                </ul>
+            
+            </div>
+            
+        
+        </div>
+   </div>
+
+     
+</body>
+<script type="text/javascript">
+$(document).ready(function(){
+    // date time picker
+    if($(".iDate.full").length>0){
+        $(".iDate.full").datetimepicker({
+            locale: "zh-cn",
+            format: "YYYY-MM-DD a hh:mm",
+            dayViewHeaderFormat: "YYYY年 MMMM"
+        });
+    }
+    if($(".iDate.date").length>0){
+        $(".iDate.date").datetimepicker({
+            locale:"zh-cn",
+            format:"YYYY-MM-DD",
+            dayViewHeaderFormat:"YYYY年 MMMM"
+        });
+    }
+})
+</script>
 
 </html>
-
